<resources>
    <string name="app_name">Gan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="status">Status</string>
    <string name="nick_name">Nick Name</string>
    <string name="season_appearance">Season Appearance</string>
    <string name="image_back">Image back</string>
    <string name="character_image">Character Image</string>
    <string name="apperance_filter">Filter by Appearance</string>
    <string name="season_5">Season 5</string>
    <string name="season_4">Season 4</string>
    <string name="season_3">Season 3</string>
    <string name="season_2">Season 2</string>
    <string name="season_1">Season 1</string>
    <string name="ok">OK</string>
</resources>