<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <ImageView
        android:id="@+id/img_character"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen180" />

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"/>

    <TextView
        android:id="@+id/tv_occupation_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_label"/>

    <TextView
        android:id="@+id/tv_status_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_occupation_label"/>

    <TextView
        android:id="@+id/tv_nickname_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_label"/>

    <TextView
        android:id="@+id/tv_appearance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Season Appearance"
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname_label"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"/>

    <TextView
        android:id="@+id/tv_occupation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_occupation"/>

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="@dimen/dimen8"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_label"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_seasons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname"/>


</androidx.constraintlayout.widget.ConstraintLayout>
